unpackaged/main/default/objects/T1_Invoice_Line__c/T1_Invoice_Line__c.object-meta.xml
<CustomObject>
    <description>The line items on T1 Invoices, such as products etc.</description>
    <label>T1 Invoice Line</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T1 Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>