unpackaged/main/default/objects/T1_Invoice_Line__c/fields/AllocatedRevenueAmount__c.field-meta.xml
<CustomField>
    <fullName>AllocatedRevenueAmount__c</fullName>
    <label>Revenue Allocation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>