unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Annual_Increase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Increase_Rate__c</fullName>
    <formula>Source_Invoice_Line__r.Annual_Increase_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Increase Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>