unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Annual_Increase_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Annual_Increase_Rate_Type__c</fullName>
    <formula>Source_Invoice_Line__r.Annual_Increase_Rate_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Increase Rate Type</label>
    <type>Text</type>
</CustomField>