unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The item related to the invoice line.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>AssetT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>