unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>Yi: Debits__c, Payments__c removed</description>
    <formula>TotalAmount__c - Credits__c + NegativeLineConversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount (with tax) - Payments - Credits + Debits + Negative Line Conversion</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>