unpackaged/main/default/objects/T1_Invoice_Line__c/fields/BaseCurrencyAmount__c.field-meta.xml
<CustomField>
    <fullName>BaseCurrencyAmount__c</fullName>
    <label>Base Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>