unpackaged/main/default/objects/T1_Invoice_Line__c/fields/BillingFinanceBook__c.field-meta.xml
<CustomField>
    <fullName>BillingFinanceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Finance Book</label>
    <referenceTo>blng__FinanceBook__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>BillingFinanceBookInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>