unpackaged/main/default/objects/T1_Invoice_Line__c/fields/BillingFinancePeriod__c.field-meta.xml
<CustomField>
    <fullName>BillingFinancePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Finance Period</label>
    <referenceTo>blng__FinancePeriod__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>BillingFinancePeriodT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>