unpackaged/main/default/objects/T1_Invoice_Line__c/fields/BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequency__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>