unpackaged/main/default/objects/T1_Invoice_Line__c/fields/BillingGLRule__c.field-meta.xml
<CustomField>
    <fullName>BillingGLRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Invoice Lines (Billing GL Rule)</relationshipLabel>
    <relationshipName>BillingGLRuleT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>