unpackaged/main/default/objects/T1_Invoice_Line__c/fields/BillingGLTreatment__c.field-meta.xml
<CustomField>
    <fullName>BillingGLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>BillingGLTreatmentT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>