unpackaged/main/default/objects/T1_Invoice_Line__c/fields/BillingRule__c.field-meta.xml
<CustomField>
    <fullName>BillingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Rule</label>
    <referenceTo>blng__BillingRule__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>BillingRuleT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>