unpackaged/main/default/objects/T1_Invoice_Line__c/fields/BillingTransaction__c.field-meta.xml
<CustomField>
    <fullName>BillingTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Transaction</label>
    <referenceTo>blng__BillingTransaction__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>InvoiceLinesT1BillingTransaction</relationshipName>
    <type>Lookup</type>
</CustomField>