unpackaged/main/default/objects/T1_Invoice_Line__c/fields/BillingTreatment__c.field-meta.xml
<CustomField>
    <fullName>BillingTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Treatment</label>
    <referenceTo>blng__BillingTreatment__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>BillingTreatmentT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>