unpackaged/main/default/objects/T1_Invoice_Line__c/fields/ChargeDate__c.field-meta.xml
<CustomField>
    <fullName>ChargeDate__c</fullName>
    <description>This is the date on which Invoice Line is Created</description>
    <label>Charge Date</label>
    <type>Date</type>
</CustomField>