unpackaged/main/default/objects/T1_Invoice_Line__c/fields/ChargeType__c.field-meta.xml
<CustomField>
    <fullName>ChargeType__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__ChargeType</valueSetName>
    </valueSet>
</CustomField>