unpackaged/main/default/objects/T1_Invoice_Line__c/fields/ConvertedCreditNoteLine__c.field-meta.xml
<CustomField>
    <fullName>ConvertedCreditNoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Credit Note Line</label>
    <referenceTo>blng__CreditNoteLine__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>ConvertedCreditNoteLineT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>