unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <description>Yi replace summary with currency type</description>
    <label>Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>