unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Customer_ActivityCode__c.field-meta.xml
<CustomField>
    <fullName>Customer_ActivityCode__c</fullName>
    <formula>&#39;00&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ActivityCode</label>
    <type>Text</type>
</CustomField>