unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Customer_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_GL_Code__c</fullName>
    <formula>OrderProduct__r.Order.Account.Account_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer GL Code</label>
    <type>Text</type>
</CustomField>