unpackaged/main/default/objects/T1_Invoice_Line__c/fields/DaysPastDue__c.field-meta.xml
<CustomField>
    <fullName>DaysPastDue__c</fullName>
    <description>The number of days since the invoice line’s due date.</description>
    <formula>Invoice__r.DaysOutstanding__c</formula>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>