unpackaged/main/default/objects/T1_Invoice_Line__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>The date by which invoice payments are expected to be received.</description>
    <formula>Invoice__r.DueDate__c</formula>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>