unpackaged/main/default/objects/T1_Invoice_Line__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The ending date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
    <inlineHelpText>The last day of the billing period.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>