unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>