unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Financial_Year_and_Period__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year_and_Period__c</fullName>
    <formula>IF(MONTH(StartDate__c) &gt;= 10, TEXT(VALUE(RIGHT(TEXT(YEAR( StartDate__c )), 2)) + 1), RIGHT(TEXT(YEAR( StartDate__c )), 2))
+&#39;&#39;+ 
CASE(
  MONTH( StartDate__c ),
  1, &quot;04&quot;,
  2, &quot;05&quot;,
  3, &quot;06&quot;,
  4, &quot;07&quot;,
  5, &quot;08&quot;,
  6, &quot;09&quot;,
  7, &quot;10&quot;,
  8, &quot;11&quot;,
  9, &quot;12&quot;,
  10, &quot;01&quot;,
  11, &quot;02&quot;,
  &quot;03&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Year and Period</label>
    <type>Text</type>
</CustomField>