unpackaged/main/default/objects/T1_Invoice_Line__c/fields/GroupedQuantity__c.field-meta.xml
<CustomField>
    <fullName>GroupedQuantity__c</fullName>
    <label>Grouped Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>