unpackaged/main/default/objects/T1_Invoice_Line__c/fields/InvoiceLineState__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLineState__c</fullName>
    <label>Invoice Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceState</valueSetName>
    </valueSet>
</CustomField>