unpackaged/main/default/objects/T1_Invoice_Line__c/fields/InvoiceLineStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLineStatus__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceStatus</valueSetName>
    </valueSet>
</CustomField>