unpackaged/main/default/objects/T1_Invoice_Line__c/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>LegalEntityT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>