unpackaged/main/default/objects/T1_Invoice_Line__c/fields/LegalEntityReference__c.field-meta.xml
<CustomField>
    <fullName>LegalEntityReference__c</fullName>
    <externalId>true</externalId>
    <label>LegalEntityReference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>