unpackaged/main/default/objects/T1_Invoice_Line__c/fields/NegativeLineConversion__c.field-meta.xml
<CustomField>
    <fullName>NegativeLineConversion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Negative Line Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>