unpackaged/main/default/objects/T1_Invoice_Line__c/fields/New_Business__c.field-meta.xml
<CustomField>
    <fullName>New_Business__c</fullName>
    <label>New Business?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>