unpackaged/main/default/objects/T1_Invoice_Line__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>OrderProductInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>