unpackaged/main/default/objects/T1_Invoice_Line__c/fields/OverrideInitialRevenueEndDate__c.field-meta.xml
<CustomField>
    <fullName>OverrideInitialRevenueEndDate__c</fullName>
    <label>Override Initial Revenue End Date</label>
    <type>Date</type>
</CustomField>