unpackaged/main/default/objects/T1_Invoice_Line__c/fields/OverrideInitialRevenueStartDate__c.field-meta.xml
<CustomField>
    <fullName>OverrideInitialRevenueStartDate__c</fullName>
    <label>Override Initial Revenue Start Date</label>
    <type>Date</type>
</CustomField>