unpackaged/main/default/objects/T1_Invoice_Line__c/fields/RevenueExpectedAmount__c.field-meta.xml
<CustomField>
    <fullName>RevenueExpectedAmount__c</fullName>
    <label>Revenue Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>