unpackaged/main/default/objects/T1_Invoice_Line__c/fields/RevenueLiabilityAmount__c.field-meta.xml
<CustomField>
    <fullName>RevenueLiabilityAmount__c</fullName>
    <label>Revenue Liability Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>