unpackaged/main/default/objects/T1_Invoice_Line__c/fields/RevenueMostLikelyAmount__c.field-meta.xml
<CustomField>
    <fullName>RevenueMostLikelyAmount__c</fullName>
    <label>Revenue Most Likely Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>