unpackaged/main/default/objects/T1_Invoice_Line__c/fields/RevenueScheduleStatus__c.field-meta.xml
<CustomField>
    <fullName>RevenueScheduleStatus__c</fullName>
    <label>Revenue Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueScheduleStatus</valueSetName>
    </valueSet>
</CustomField>