unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Rounded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rounded_Amount__c</fullName>
    <label>Rounded Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>