unpackaged/main/default/objects/T1_Invoice_Line__c/fields/RU_Account__c.field-meta.xml
<CustomField>
    <fullName>RU_Account__c</fullName>
    <formula>Customer_GL_Code__c+&#39;.&#39;+Customer_ActivityCode__c+&#39;.&#39;+  OrderProduct__r.Natural_Account__c +&#39;.&#39;+Financial_Year_and_Period__c +&#39;.&#39;+ Transaction_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RU Account</label>
    <type>Text</type>
</CustomField>