unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <formula>Source_Invoice_Line__r.Sort_Order__c</formula>
    <label>Sort Order</label>
    <type>Text</type>
</CustomField>