unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Source_Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>Source_Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Invoice Line</label>
    <referenceTo>blng__InvoiceLine__c</referenceTo>
    <relationshipLabel>T1 Invoice Lines</relationshipLabel>
    <relationshipName>T1_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>