unpackaged/main/default/objects/T1_Invoice_Line__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>The starting date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
    <inlineHelpText>The first day of the billing period.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>