unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <inlineHelpText>Invoice Line total (before taxes).</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>