unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <inlineHelpText>Sum of all taxes for this invoice line</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>