unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxCity__c.field-meta.xml
<CustomField>
    <fullName>TaxCity__c</fullName>
    <inlineHelpText>For use in tax calculations. Destination city for this product.</inlineHelpText>
    <label>Tax City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>