unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxCountry__c.field-meta.xml
<CustomField>
    <fullName>TaxCountry__c</fullName>
    <inlineHelpText>For use in tax calculations. Destination Country for this product.</inlineHelpText>
    <label>Tax Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>