unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxCounty__c.field-meta.xml
<CustomField>
    <fullName>TaxCounty__c</fullName>
    <label>Tax County (Override)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>