unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxGLRule__c.field-meta.xml
<CustomField>
    <fullName>TaxGLRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>TaxGLRuleT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>