unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxGLTreatment__c.field-meta.xml
<CustomField>
    <fullName>TaxGLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>Invoice Lines (Tax GL Treatment)</relationshipLabel>
    <relationshipName>TaxGLTreatmentT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>