unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxLocationCode__c.field-meta.xml
<CustomField>
    <fullName>TaxLocationCode__c</fullName>
    <label>Tax Location Code (Override)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>