unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxPercentageApplied__c.field-meta.xml
<CustomField>
    <fullName>TaxPercentageApplied__c</fullName>
    <label>Tax Percentage Applied</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>