unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxRule__c.field-meta.xml
<CustomField>
    <fullName>TaxRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Rule</label>
    <referenceTo>blng__TaxRule__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>TaxRuleT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>