unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxState__c.field-meta.xml
<CustomField>
    <fullName>TaxState__c</fullName>
    <inlineHelpText>For use in tax calculations. Destination State for this product.</inlineHelpText>
    <label>Tax State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>