unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxStreet2__c.field-meta.xml
<CustomField>
    <fullName>TaxStreet2__c</fullName>
    <label>Tax Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>