unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxStreet__c.field-meta.xml
<CustomField>
    <fullName>TaxStreet__c</fullName>
    <inlineHelpText>For use in tax calculations. Destination Street Address for this product.</inlineHelpText>
    <label>Tax Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>