unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxTreatment__c.field-meta.xml
<CustomField>
    <fullName>TaxTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Treatment</label>
    <referenceTo>blng__TaxTreatment__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>TaxTreatmentT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>