unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TaxZipCode__c.field-meta.xml
<CustomField>
    <fullName>TaxZipCode__c</fullName>
    <inlineHelpText>For use in tax calculations. Destination ZIP Code/Postal Code for this product.</inlineHelpText>
    <label>Tax Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>