unpackaged/main/default/objects/T1_Invoice_Line__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <inlineHelpText>SubTotal + Tax</inlineHelpText>
    <label>Total Amount (With Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>