unpackaged/main/default/objects/T1_Invoice_Line__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <defaultValue>&#39;I&#39;</defaultValue>
    <label>Transaction Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>