unpackaged/main/default/objects/T1_Invoice_Line__c/fields/UsageSummary__c.field-meta.xml
<CustomField>
    <fullName>UsageSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usage Summary</label>
    <referenceTo>blng__UsageSummary__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>UsageSummaryT1InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>